# codemod-engine-rust

./: Cargo.toml  README.md  test.bash
configurationA/: rules.toml
examples/: index copy 4.ts
src/: command_line_arguments.rs  compare_command_line_arguments.rs  extract_head_elements.rs  head.rs  head_file.rs  main.rs  page_file.rs  paths.rs  queries.rs  tree.rs
