[package]
name = "nora-rust-engine"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
wax = { version = "0.5.0" }
json = { version = "0.12.4" }
tree-sitter = "0.20.9"
tree-sitter-traversal = "0.1.2"
tree-sitter-typescript = { git = "https://github.com/tree-sitter/tree-sitter-typescript.git" }