[package]
name = "codemod-engine-rust"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
json = { version = "0.12.4" }
piranha = { git = "https://github.com/intuita-inc/piranha.git", rev = "50f74ae462574c7168ddb872eea3272193b090f7" }
glob = { version = "0.3.1" }
